# METAD699-Project

./: .gitignore  README.md  _quarto.yml  analysis.qmd  downloads.qmd  index.qmd  presentation.qmd  project.md  project1.ipynb  pyproject.toml  styles.css  zurich_airbnb.html  zurich_airbnb.ipynb  zurich_airbnb_project.ipynb
.github/workflows/: quarto-deploy.yml
output/: zurich_airbnb_heatmap.html  zurich_airbnb_map.html
