[project]
name = "metad699-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "wordcloud>=1.9.4",
]
