[project]
name = "metad699-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandoc>=2.4",
    "plotly>=6.5.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "wordcloud>=1.9.4",
]
